--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
     # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name ${DOMAIN_NAME};
+        server_name ${DOMAIN_NAME} ${DUCKDNS_DOMAIN}; # Add DuckDNS domain here
         # Certbot verification
         location ^~ /.well-known/acme-challenge/ {
           allow all;
@@ -45,10 +45,6 @@ http {
         # Option 1: Let's Encrypt (for registered domain)
         ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
-
-        # Option 2: Let's Encrypt (for DuckDNS)
-        #ssl_certificate /etc/letsencrypt/live/${DUCKDNS_DOMAIN}/fullchain.pem;
-        #ssl_certificate_key /etc/letsencrypt/live/${DUCKDNS_DOMAIN}/privkey.pem;
 
         # Option 3: Self-signed certificate
         #ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
@@ -76,4 +72,40 @@ http {
             proxy_read_timeout 86400;
         }
     }
+    server {
+        listen 443 ssl;
+        server_name ${DOMAIN_NAME};
+
+        # SSL Configuration (choose one option)
+        # Option 1: Let's Encrypt (for registered domain)
+        ssl_certificate /etc/letsencrypt/live/${DUCKDNS_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DUCKDNS_DOMAIN}/privkey.pem;
+
+        # Option 3: Self-signed certificate
+        #ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+        #ssl_certificate_key /etc/ssl/certs/nginx-selfsigned.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        location / {
+            proxy_pass http://qgis:14500;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_read_timeout 86400;
+        }
+
+        location /files {
+            proxy_pass http://filebrowser:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_read_timeout 86400;
+        }
+    }
+
 }
