--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 QGIS_USER_UID=1000
 QGIS_USER_GID=1000
 XPRA_PORT=14500
-XPRA_PASSWORD=your_xpra_password # Set a password for Xpra
+XPRA_PASSWORD=xpra_admin # Set a password for Xpra
 QGIS_DATA_DIR=/data/storage
 
 # Nginx Configuration
@@ -21,7 +21,7 @@ FILEBROWSER_BASE_URL=/files
 CERTBOT_EMAIL=your_email@example.com # Replace with your email
 
 # Self-signed Certificate Configuration (optional)
-SSL_COUNTRY=US # Two-letter country code
-SSL_STATE="Your State"
-SSL_LOCALITY="Your Locality"
-SSL_ORGANIZATION="Your Organization"
+SSL_COUNTRY=IT # Two-letter country code
+SSL_STATE="ITALY"
+SSL_LOCALITY="BOLOGNA"
+SSL_ORGANIZATION="Alma Mater Studiorum"
