--- a/xpra/xpra.conf
+++ b/xpra/xpra.conf
@@ -5,7 +5,9 @@
 mode = start
 
 # TCP port to listen on
-tcp-bind = 0.0.0.0:14500
+#tcp-bind = 0.0.0.0:14500
+
+bind-tcp = 0.0.0.0:14500
 
 # Enable HTML5 client
 html = on
@@ -20,14 +22,14 @@ start-child = qgis
 exit-with-children = yes
 
 # Disable daemon mode (useful for debugging with Docker)
-daemon = no
+#daemon = no
 
 # Disable systemd integration (for Docker)
 systemd-run = no
 
 # Authentication (can be set to "none" for testing, but use SSSD in production)
-# auth = none
-auth = pam
+auth = none
+#auth = pam
 
 # Log file location (for Docker, we're writing to stdout/stderr)
 # log-file = /var/log/xpra.log
