--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ QGIS_DATA_DIR=/data/storage
 # Nginx Configuration
 NGINX_PORT=80
 NGINX_HTTPS_PORT=443
-DOMAIN_NAME=your_domain.com # Replace with your FQDN or use localhost
+#DOMAIN_NAME=your_domain.com # Replace with your FQDN or use localhost
+DOMAIN_NAME=qgis-test # Replace with your FQDN or use localhost
 DUCKDNS_DOMAIN=your_subdomain.duckdns.org # Replace with your DuckDNS domain
 
 # File Browser Configuration
