Fixes Qgis Image

--- a/.env
+++ b/.env
@@ -1,8 +1,16 @@
-# QGIS-Xpra Configuration
-QGIS_USER_UID=1000
-QGIS_USER_GID=1000
+# .env
+# Base host user IDs (adjust to your host UID/GID)
+BASE_UID=1000
+BASE_GID=1000
+
+# Calculate using expr (POSIX-compliant)
+QGIS_USER_UID=$(expr $BASE_UID + 10000)
+QGIS_USER_GID=$(expr $BASE_GID + 10000)
+
+
+# Application settings
 XPRA_PORT=14500
-XPRA_PASSWORD=xpra_admin # Set a password for Xpra
+XPRA_PASSWORD=xpra_admin
 QGIS_DATA_DIR=/data/storage
 
 # Nginx Configuration
