--- a/xpra/xpra.conf
+++ b/xpra/xpra.conf
@@ -1,59 +1,5 @@
-# Xpra server configuration file
+[html5]
+enabled = yes
 
-[server]
-# Mode: start | start-desktop | shadow
-mode = start
-
-# TCP port to listen on
-#tcp-bind = 0.0.0.0:14500
-
-bind-tcp = 0.0.0.0:14500
-
-# Enable HTML5 client
-html = on
-
-# Virtual display settings (using Xvfb)
-xvfb = Xvfb -screen 0 1920x1080x24+32 -nolisten tcp -noreset +extension GLX +extension RANDR +extension RENDER -auth $XAUTHORITY
-
-# Command to run when a client connects
-start-child = qgis
-
-# Exit when the last client disconnects
-exit-with-children = yes
-
-# Disable daemon mode (useful for debugging with Docker)
-#daemon = no
-
-# Disable systemd integration (for Docker)
-systemd-run = no
-
-# Authentication (can be set to "none" for testing, but use SSSD in production)
-auth = none
-#auth = pam
-
-# Log file location (for Docker, we're writing to stdout/stderr)
-# log-file = /var/log/xpra.log
-
-# Encoding options
-encodings = webp,png,jpeg,rgb
-
-[client]
-# Preferred encoding (adjust based on network conditions)
-encoding = auto
-
-[keyboard]
-# Keyboard layout and options (adjust as needed)
-# layout = us
-# variant =
-# options =
-
-[clipboard]
-# Clipboard synchronization
-clipboard = yes
-
-[encoding]
-# Encoding quality and speed settings
-quality = 90
-min-quality = 50
-speed = 70
-min-speed = 30
+[seamless]
+enabled = yes
