--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,15 @@ http {
 
     #gzip  on;
     # Redirect HTTP to HTTPS
+        if ($scheme = http) {
+            return 301 https://$server_name$request_uri;
+        }
+        if ($scheme = http) {
+            return 301 https://$server_name$request_uri;
+        }
+        if ($scheme = http) {
+            return 301 https://$server_name$request_uri;
+        }
     server {
         listen 80;
         server_name ${DOMAIN_NAME} ${DUCKDNS_DOMAIN}; # Add DuckDNS domain here
