--- a/xpra/xpra.conf
+++ b/xpra/xpra.conf
@@ -1,5 +1,44 @@
-[html5]
-enabled = yes
 
-[seamless]
-enabled = yes
+################################################################################
+# File transfers
+
+# Receive files
+#file-transfer = ask
+#file-transfer = no
+file-transfer = auto
+
+# Open URL
+#open-url = no
+#open-url = auto
+
+# Location where files are received:
+#download-path = ~/Downloads
+#download-path = ~/Desktop
+#download-path = /tmp
+
+# File size limit
+file-size-limit = ${XPRA_FILE_SIZE_LIMIT}
+
+# How to open files:
+#open-command = /usr/bin/xdg-open
+
+# Open files
+#open-files = no
+#open-files = yes
+open-files = yes
+
+################################################################################
+# Printer forwarding
+
+# Print support:
+printing = no
+
+
+################################################################################
+# Webcam forwarding
+
+# webcam = auto
+# webcam = no
+# webcam = /dev/video0
+webcam = no
+
