--- a/xpra/xpra.conf
+++ b/xpra/xpra.conf
@@ -14,7 +14,7 @@ file-transfer = auto
 # Location where files are received:
 #download-path = ~/Downloads
 #download-path = ~/Desktop
-#download-path = /tmp
+download-path = /tmp
 
 # File size limit
 file-size-limit = ${XPRA_FILE_SIZE_LIMIT}
@@ -23,9 +23,9 @@ file-size-limit = ${XPRA_FILE_SIZE_LIMIT}
 #open-command = /usr/bin/xdg-open
 
 # Open files
-#open-files = no
+open-files = no
 #open-files = yes
-open-files = yes
+#open-files = yes
 
 ################################################################################
 # Printer forwarding
