--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-version: '3.7'
+version: '3.8'
 
 services:
   qgis:
     build:
-      context: .
+      context: ./build/qgis
+      dockerfile: Dockerfile
       args:
         - QGIS_USER_UID
         - QGIS_USER_GID
-    container_name: qgis-container
+    container_name: ${PROJECT_NAME}-qgis-xpra
     restart: unless-stopped
     environment:
       - QGIS_USER_UID=${QGIS_USER_UID}
       - QGIS_USER_GID=${QGIS_USER_GID}
       - XPRA_PASSWORD=${XPRA_PASSWORD}
       - QGIS_DATA_DIR=${QGIS_DATA_DIR}  
+      - XPRA_PORT=14500
     volumes:
       - ./data/storage:${QGIS_DATA_DIR}
       - ./config/qgis:/etc/xpra  
-      - ./log/qgis-xpra:/var/log
+      - ./logs/qgis-xpra:/var/log
     tmpfs:
       - /run:uid=${QGIS_USER_UID},gid=${QGIS_USER_GID},mode=700
       - /tmp
@@ -30,7 +32,7 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: nginx-proxy
+    container_name: ${PROJECT_NAME}-nginx-proxy
     restart: unless-stopped
     volumes:
       - ${PWD}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -51,58 +53,61 @@ services:
       - qgis-network
 
   filebrowser:
-    image: filebrowser/filebrowser:latest
-    container_name: filebrowser-container
+    image: filebrowser/filebrowser
+    container_name: ${PROJECT_NAME}-filebrowser
     restart: unless-stopped
     environment:
       - FB_BASEURL=${FILEBROWSER_BASE_URL}
-      - FB_DATABASE=/database/database.db
+      - FB_DATABASE=/config/db/database.db
     volumes:
-      - ./data/storage:${QGIS_DATA_DIR}
-      - ./data/filebrowser:${FB_DATABASE}
-      - ./config/filebrowser:/config  
-      - ./log/filebrowser.log:/var/log/filebrowser.log
+      - ./data/storage:/srv
+      - ./config/filebrowser/filebrowser.json:/.filebrowser.json
+      - ./config/filebrowser/db:/config/db
+      - ./logs/filebrowser:/logs
     user: "${QGIS_USER_UID}:${QGIS_USER_GID}"
     ports: 
-      - "443:8080"  
+      - "8080:80"
     networks:
       - qgis-network
 
   certbot-fqdn:
     image: certbot/certbot:latest
-    container_name: certbot-fqdn
+    container_name: ${PROJECT_NAME}-certbot-fqdn
     volumes:
       - ${PWD}/data/certbot/conf:/etc/letsencrypt
       - ${PWD}/data/certbot/www:/var/www/certbot
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email -d ${DOMAIN_NAME} # For registered domain
+    command: certonly --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email -d ${DOMAIN_NAME}
     networks:
       - qgis-network
 
   certbot-duckdns:
     image: certbot/certbot:latest
-    container_name: certbot-duckdns
+    container_name: ${PROJECT_NAME}-certbot-duckdns
     volumes:
       - ${PWD}/data/certbot/conf:/etc/letsencrypt
-      - ${PWD}/certbot:/etc/certbot # Mount for duckdns.ini
+      - ${PWD}/certbot:/etc/certbot
     environment:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
     depends_on:
       - nginx
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email --manual-public-ip-logging-ok --manual-auth-hook \"./certbot/duckdns.sh renew\" --manual-cleanup-hook \"./certbot/duckdns.sh cleanup\" --deploy-hook \"docker exec -it nginx-proxy nginx -s reload\" -d ${DUCKDNS_DOMAIN} || exit 1; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email --manual-public-ip-logging-ok --manual-auth-hook \"./certbot/duckdns.sh renew\" --manual-cleanup-hook \"./certbot/duckdns.sh cleanup\" --deploy-hook \"docker exec -it ${PROJECT_NAME}-nginx-proxy nginx -s reload\" -d ${DUCKDNS_DOMAIN} || exit 1; sleep 12h & wait $${!}; done;'"
     networks:
       - qgis-network
 
   self-signed-cert:
     image: paulczar/omgwtfssl
-    container_name: self-signed-cert
+    container_name: ${PROJECT_NAME}-self-signed-cert
     environment:
       - SSL_SUBJECT="example.com"
     volumes:
       - ${PWD}/data/certbot/conf:/certs
     networks:
       - qgis-network
+
+volumes:
+  data:
 
 networks:
   qgis-network:
