--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${PWD}/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ${PWD}/log/nginx.log:/var/log/nginx/access.log
+      - ./logs/nginx:/var/log/nginx
       - ${PWD}/nginx/ssl:/etc/nginx/ssl:ro
       - ${PWD}/nginx/ssl:/etc/nginx/ssl:ro
       - ${PWD}/nginx/ssl:/etc/nginx/ssl:ro
@@ -76,6 +76,7 @@ services:
     volumes:
       - ${PWD}/data/certbot/conf:/etc/letsencrypt
       - ${PWD}/data/certbot/www:/var/www/certbot
+      - ./logs/certbot-fqdn:/var/www/letsencript
     depends_on:
       - nginx
     command: certonly --webroot --webroot-path=/var/www/certbot --email ${CERTBOT_EMAIL} --agree-tos --no-eff-email -d ${DOMAIN_NAME}
@@ -88,6 +89,7 @@ services:
     volumes:
       - ${PWD}/data/certbot/conf:/etc/letsencrypt
       - ${PWD}/certbot:/etc/certbot
+      - ./logs/certbot-duckdns:/var/log/letsencrypt
     environment:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
     depends_on:
@@ -103,6 +105,7 @@ services:
       - SSL_SUBJECT="example.com"
     volumes:
       - ${PWD}/data/certbot/conf:/certs
+      - ./logs/self-signed-cert:/var/log        
     networks:
       - qgis-network
 
